# Nasaspace

./: README.md  main.py  pyproject.toml
models/: gradientboost_exoplanets.pkl
routers/: predict.py
schemas/: exceptions.py  responses.py
